# tunegen

./: .gitignore  README.md  setup.cfg  setup.py  tox.ini
tests/unit/data/: test_abc.py  test_scrape.py
tests/unit/data/static/: cooleys.abc  cooleys.json
tunegen/data/: __init__.py  scrape.py  tune.py
