[metadata]
name = tunegen
author = Noah Waterfield Price
author-email = noahwaterfieldprice@gmail.com
description = `tunegen` is a Python library for generating Irish traditional music.
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
python_requires = >=3.7
install_requires =
    bs4
    requests
